syntax = "proto3";

package golem.accountsummary.v1;

import "golem/common/account_id.proto";

message AccountSummary {
  golem.common.AccountId id = 1;
  string name = 2;
  string email = 3;
  int64 component_count = 4;
  int64 worker_count = 5;
  string created_at = 6;
}
